--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,22 @@ body {
 h1, h2, h3, h4, h5, h6 {
   @apply font-display;
 }
+/* Custom Swiper Styles */
+.swiper-button-next,
+.swiper-button-prev {
+  color: #000;
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 18px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #FAD114; /* brand-yellow */
+}
